--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
-    macloginhook: "#{source_dir}"
+    macntp: "#{source_dir}"
