--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ env:
   - PUPPET_GEM_VERSION="3.8.7"
   - PUPPET_GEM_VERSION="3.8.7" STRICT_VARIABLES=yes
   - PUPPET_GEM_VERSION="3.8.7" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+  - PUPPET_GEM_VERSION="4.5.2"
+  - PUPPET_GEM_VERSION="4.5.2" STRICT_VARIABLES=yes
+  - PUPPET_GEM_VERSION="4.7.0"
 matrix:
   exclude:
   # Ruby 1.9.3
