--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: ruby
 bundler_args: --without development system_tests
 before_install: rm Gemfile.lock || true
 rvm:
-  - 1.9.3
+# 1.9.3 fails
+#  - 1.9.3
   - 2.0.0
   - 2.1.0
 script: bundle exec rake test
